--- a/.classpath
+++ b/.classpath
@@ -30,10 +30,7 @@
 	<classpathentry kind="lib" path="lib/jdbc/ojdbc6.jar"/>
 	<classpathentry kind="lib" path="lib/jsoup-1.6.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/toolcat.jar" sourcepath="/toolcat"/>
-	<classpathentry kind="lib" path="lib/websqrd_libs.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="lib" path="development/conf"/>
 	<classpathentry kind="lib" path="lib/httpclient/commons-codec-1.6.jar"/>
 	<classpathentry kind="lib" path="lib/httpclient/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/httpclient/fluent-hc-4.2.1.jar"/>
@@ -42,5 +39,6 @@
 	<classpathentry kind="lib" path="lib/httpclient/httpcore-4.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/httpclient/httpmime-4.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.1.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/websqrdlibs"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
